# portfolio-rust-backend

CLI/ToDo/: Cargo.toml  Readme.md
CLI/ToDo/src/: main.rs
CLI/weather/: Cargo.toml  main.py
CLI/weather/src/: main.rs
Class_2/: notes.txt
Learning_Rust/: Cargo.toml
Learning_Rust/src/: day_1.rs  guessing_game.rs  main.rs
Project/: LICENSE  README.md  vercel.json
Project/.github/workflows/: ci.yml  deploy_frontend.yml
Project/backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
Project/backend/src/: auth.rs  db.rs  errors.rs  main.rs  models.rs
Project/backend/src/handlers/: auth.rs  mod.rs  projects.rs  skills.rs
Project/frontend/: README.md  package-lock.json  package.json  vercel.json
Project/frontend/src/: App.jsx
Project/frontend/src/components/: About.jsx  Contact.jsx  Footer.jsx  Hero.jsx  Navigation.jsx  Projects.jsx  Skills.jsx
Project/frontend/src/services/: api.js
Project/frontend/src/styles/: index.css
Web Backend/AcixWeb/: Cargo.toml
Web Backend/AcixWeb/src/: main.rs
